<resources>
    <string name="app_name">calorie-diary</string>
    <!-- Sign in / Log in-->
    <string name="signin_big">Sign In</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Dont\'t have an account?</string>
    <string name="create_account">Create an account</string>
    <string name="login_error">email or password is wrong</string>
    <string name="login_validation_error">all data must be filled using valid data</string>
    <!-- Sign up -->
    <string name="signup_big">Sign Up</string>
    <string name="signup_small">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signup_error">email or confirmation password is wrong</string>
    <string name="user_agreement">By creating an account, I acknowledge that I have fully read, understood, and agreed with our Terms of Use and Privacy Policy.</string>
    <string name="signin_small">Sign in</string>
    <!-- Input personal data -->
    <string name="personal_data">Personal Data</string>
    <string name="name">Name</string>
    <string name="birthdate">Birth Date</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height">Height</string>
    <string name="height_cm">Height (cm)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="personal_data_error">all data must be filled using valid data</string>
    <string name="email_exists_error">email already exists</string>
    <string name="finish">Finish</string>
    <!-- My Profile -->
    <string name="my_profile">My Profile</string>
    <string name="start_weight">Start\nWeight</string>
    <string name="start_height">Start\nHeight</string>
    <string name="save_changes">Save Changes</string>
    <string name="logout">Log Out</string>
    <!-- Add food -->
    <string name="back_button_desc">Back</string>
    <string name="food_name">Banana</string>
    <string name="food_calories">93 Cals (100 g)</string>
    <string name="food_amount_hint">100</string>
    <string name="food_unit">g</string>
    <string name="nutritional_facts_label">Nutritional facts 🍏</string>
    <string name="total_calories_label">Total Calories</string>
    <string name="total_calories_qty">Total Calories: 93 / 500 Cals</string>
    <string name="carbs_label">Carbs</string>
    <string name="carbs_qty">Carbs: 20 / 36 g</string>
    <string name="protein_label">Protein</string>
    <string name="protein_qty">Protein: 1 / 30 g</string>
    <string name="fat_label">Fat</string>
    <string name="fat_qty">Fat: 1 / 24 g</string>
    <string name="add_food_button">Add this food</string>
    <!-- Search Food -->
    <string name="calorie">0/353 Cal</string>
    <string name="addfood">Add a food to your meal!</string>
    <string name="searchfood">Search</string>
    <string name="typefood">Type food</string>
    <string name="database1">Banana</string>
    <string name="database2">93 Cal, 1 banana (100 g)</string>
    <!-- Dashboard-->
    <string name="calorie_in_check">Calorie In Check!</string>
    <string name="addfood_dashboard">Add Food</string>
    <string name="meals">Your Meals</string>
    <string name="hw">Height and Weight</string>
    <string name="berat">Enter your weight (kg)</string>
    <string name="tinggi">Enter your Height (cm)</string>
    <string name="submit">Submit</string>
    <string name="angkacalorie">1000/1232 cals</string>
    <string name="water">Water Challenge</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="angkautama">1000/1232\ncals</string>
    <string name="cal">Cal</string>
    <string name="left">Left</string>
    <string name="protein">Proteins</string>
    <string name="angkaprotein">25/55 g</string>
    <string name="fat">Fat</string>
    <string name="angkaprofat">0/55 g</string>
    <string name="carbs">Carbs</string>
    <string name="angkacarbs">0/55 g</string>
    <string name="fiber">Fiber</string>
    <string name="angkafiber">0/55 g</string>
    <string name="today">TODAY</string>
    <string name="nol">0</string>

</resources>