<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background_white"
    tools:context=".InputPersonalDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="37dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/signup_small"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_input_rounded_corner"
            android:fontFamily="@font/poppins"
            android:hint="@string/name"
            android:inputType="text"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_input_rounded_corner"
            android:fontFamily="@font/poppins"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/age_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_input_rounded_corner"
            android:fontFamily="@font/poppins"
            android:hint="@string/age"
            android:inputType="number"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_input_rounded_corner"
            android:fontFamily="@font/poppins"
            android:hint="@string/weight_kg"
            android:inputType="number"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/height_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_input_rounded_corner"
            android:fontFamily="@font/poppins"
            android:hint="@string/height_cm"
            android:inputType="number"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:textSize="12sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="0dp"
            android:minWidth="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="10dp"
            android:layout_gravity=""
            android:background="@drawable/text_input_rounded_corner">

            <RadioButton
                android:id="@+id/male_rdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/primary"
                android:text="@string/male"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"
                android:minHeight="0dp"
                android:minWidth="48dp"
                android:layout_marginStart="0dp"/>

            <RadioButton
                android:id="@+id/female_rdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/primary"
                android:text="@string/female"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"
                android:minHeight="0dp"
                android:minWidth="48dp"
                android:layout_marginStart="31dp"
                />
        </RadioGroup>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_input_rounded_corner"
            android:fontFamily="@font/poppins"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/signup_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/personal_data_error"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/email_exists_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/email_exists_error"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/user_agreement"
            android:textColor="@color/text_black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/poppins_bold"
            android:padding="10dp"
            android:text="@string/signup_big"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/already_have_account"
                android:textColor="@color/text_black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/signin_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/signin_small"
                android:textColor="@color/blue"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>