<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Back Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_back_arrow"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_button_desc"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/my_profile"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/text_black"
                android:textSize="25sp"/>

            <ImageButton
                android:id="@+id/backButtonDummy"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_back_arrow"
                android:background="@android:color/transparent"
                android:visibility="invisible"/>

        </LinearLayout>


        <!-- Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:paddingEnd="5dp"
                android:text="@string/name"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:background="@drawable/text_input_rounded_corner"
                android:fontFamily="@font/poppins"
                android:hint="@string/name"
                android:inputType="text"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginVertical="12dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:paddingEnd="5dp"
                android:text="@string/email"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:background="@drawable/text_input_rounded_corner_disabled"
                android:fontFamily="@font/poppins"
                android:enabled="false"
                android:hint="@string/email"
                android:focusable="false"
                android:clickable="false"
                android:inputType="textEmailAddress"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Birth Date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginVertical="12dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:paddingEnd="5dp"
                android:text="@string/age"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/age_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:background="@drawable/text_input_rounded_corner"
                android:fontFamily="@font/poppins"
                android:hint="@string/age"
                android:inputType="number"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Start Weight -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginVertical="12dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:paddingEnd="5dp"
                android:text="@string/weight_kg"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/weight_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:background="@drawable/text_input_rounded_corner"
                android:fontFamily="@font/poppins"
                android:hint="@string/weight"
                android:inputType="number"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Start Height -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginVertical="12dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:paddingEnd="5dp"
                android:text="@string/height_cm"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/height_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:background="@drawable/text_input_rounded_corner"
                android:fontFamily="@font/poppins"
                android:hint="@string/height"
                android:inputType="number"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Gender -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginVertical="12dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:paddingEnd="5dp"
                android:text="@string/gender"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:orientation="horizontal"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:background="@drawable/text_input_rounded_corner">

                <RadioButton
                    android:id="@+id/rdb_male_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true"
                    app:buttonTint="@color/primary"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_black"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins"
                    android:minHeight="0dp"
                    android:minWidth="48dp"
                    android:layout_marginStart="0dp" />

                <RadioButton
                    android:id="@+id/rdb_female_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:checked="false"
                    app:buttonTint="@color/primary"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_black"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins"
                    android:minHeight="0dp"
                    android:minWidth="48dp"
                    android:layout_marginStart="31dp" />

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/save_changes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/accent"
            android:fontFamily="@font/poppins_bold"
            android:padding="10dp"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/poppins_bold"
            android:padding="10dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>